# Modem-Test-Platform

./: pyproject.toml  requirements.txt
docs/: Modem Test Platform Doc Structure.md  changelog.md  modem_settings.md  project_tree.md
docs/01_vision/: Vision.md
docs/02_requirements/: Requirements Specification.md
docs/03_glossary/: Glossary.md
docs/04_domain/: Domain Model.md
docs/05_architecture/: Architecture Diagrams.md  Software_Architecture.md
docs/06_engine/: Events.md  Execution Context.md  Step.md  Test Engine.md  TestConfiguration.md  TestPlan.md  TestRun.md
docs/07_devices/: Configuration.md  Connection.md  Device Adapter.md  Device Manager.md  Device.md  Protocol.md  State Machine.md
docs/08_measurements/: Analysis.md  Criterion.txt  Measurement.md  Metric.md  Report.md  Verdict.md
docs/changelog/: changelog.md
docs/modem_answers/: RX after connect message.txt  RX help.txt  RX led.txt  RX mode negative  RX mode positive  RX print.txt  RX reboot.txt  RX stat.txt  RX ttlstat.txt  RX wrong freq  TX freq.txt  TX help.txt  TX led.txt  TX port connect message.txt  TX print.txt  TX reboot.txt  TX stat.txt
src/modem_test_platform/: main.py  tui_main.py
src/modem_test_platform/cli/: main.py  main_pyMenu.py  main_pyMenu_01.py  menu.py  session.py  session_state.py
src/modem_test_platform/cli/commands/: __init__.py  config_commands.py  sync_commands.py  telemetry_commands.py
src/modem_test_platform/cli/handlers/: config_handlers.py  device_handlers.py  telemetry_handlers.py
src/modem_test_platform/cli/ui/: display.py  prompts.py  utils.py
src/modem_test_platform/devices/: configuration.py
src/modem_test_platform/devices/modem/: device.py  dual_session.py  modemconfiguration.py  synchronizer.py  verifier.py
src/modem_test_platform/emulation/: __init__.py  command_emulator.py
src/modem_test_platform/monitoring/: CRSFMonitor.py  __init__.py  base_monitor.py  parser_base.py  rx_monitor.py  stat_collector.py
src/modem_test_platform/protocols/crossfire/: commands.py  config.py  crossfire_protocol.py  parser.py  sync_parser.py
src/modem_test_platform/protocols/crsf_parser/: __init__.py  frames.py  handling.py
src/modem_test_platform/protocols/serial_protocol/: reconnect_config.py  serial_protocol.py  serial_transport.py
src/modem_test_platform/transport/: exceptions.py
src/modem_test_platform/transport/serial/: serial_transport.py
src/modem_test_platform/tui/: __init__.py  app.py
src/modem_test_platform/tui/screens/: config_screen.py  emulation_screen.py  main_menu.py  (+2 more)
src/modem_test_platform/ui/: __init__.py  rich_dashboard.py  rich_utils.py
src/tests/: modem_test.py  test_crossfire_adapter.py
(+21 files in other folders)
